CHATS_SIT/force-app/main/default/objects/sfsit_t_adjmt_respbl_party_hist__x.object
<CustomObject>
    <description>sfsit$t_adjmt_respbl_party_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_adjmt_respbl_party_hist</externalName>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_adjmt__c</fullName>
        <description>idn_adjmt</description>
        <externalDeveloperName>idn_adjmt</externalDeveloperName>
        <label>adjustment id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Individual id</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_party_respbl_adjmt__c</fullName>
        <description>idn_party_respbl_adjmt</description>
        <externalDeveloperName>idn_party_respbl_adjmt</externalDeveloperName>
        <label>Responsible Party Adjustment ID</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT_RESPBL_PARTY__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT_RESPBL_PARTY__c</referenceTo>
        <relationshipLabel>Adjustment Responsible Party Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_adjmt_respbl_party_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_party_respbl_adjmt_hist__c</fullName>
        <description>idn_party_respbl_adjmt_hist</description>
        <externalDeveloperName>idn_party_respbl_adjmt_hist</externalDeveloperName>
        <label>History ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_provr__c</fullName>
        <description>idn_provr</description>
        <externalDeveloperName>idn_provr</externalDeveloperName>
        <label>Provider ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_adjmt_respbl_party_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Adjustment Responsible Party History</label>
    <pluralLabel>Adjustment Responsible Party History</pluralLabel>
</CustomObject>